# Bachelorproef_E-ICT

./: .gitignore  .travis.yml  readme.md
Administratie/: .~lock.Logboek.ods#  .~lock.planning.ods#  Logboek.ods  Scriptie.odt  artikel.odt  model-vergaderverslag.doc  opstartverslag.odt  planning.ods  todo  verslbedrpr_1_Olivier_VandenEede_eict.odt
Administratie/Presentatie/: Blockschema specifiek.odg  tusssenp_Olivier_VandenEede_eict.odp  tusssenp_Olivier_VandenEede_eict.pptx
Administratie/Scriptie/: .~lock.Scriptie.odt#  Scriptie.odt
Administratie/Vergaderingen/: verslbedrpr_2_Olivier_VandenEede_eict.odt  verslpr_1_Olivier_VandenEede_eict.odt  verslpr_2_Olivier_VandenEede_eict.odt  verslpr_3_Olivier_VandenEede_eict.odt
Administratie/Weekverslagen/: .~lock.weekv_11_Olivier_VandenEede_eict.odt#  .~lock.weekv_8_Olivier_VandenEede_eict.odt#  Weekverslag.odt  weekv_10_Olivier_VandenEede_eict.odt  weekv_11_Olivier_VandenEede_eict.odt  weekv_12_Olivier_VandenEede_eict.odt  weekv_13_Olivier_VandenEede_eict.odt  weekv_16_Olivier_VandenEede_eict.odt  weekv_17_Olivier_Vandeneede_eict.odt  weekv_18_Olivier_VandenEede_eict.odt  weekv_19_Olivier_VandenEede_eict.odt  weekv_20_Olivier_VandenEede_eict.odt  weekv_21_Olivier_VandenEede-eict.odt  weekv_21_Olivier_VandenEede_eict.odt  weekv_22_Olivier_VandenEede_eict.odt  weekv_23_Olivier_VandenEede_eict.odt  weekv_24_Olivier_VandenEede_eict.odt  weekv_7_Olivier_VandenEede_eict.odt  weekv_8_Olivier_VandenEede_eict.odt  weekv_9_Olivier_VandenEede_eict.odt
Administratie/poster/: poster.pptx
Code/: .gitignore  testprojectETS.knxproj
Code/etsImport/: import.php  index.html
Code/etsimport/: testprojectGroepAddr.xml
Code/homebridge-led/: index.js
Code/knx proj/: iot_ets.xml  iot_project.knxproj
Code/landingPage/: index.html
Code/mailer/: SimKnx.php  config.php.example  mail.php
Code/setgpio/: Makefile  setGpio.c
Code/sim-knx/: .gitignore  CMakeLists.txt  Commando.cpp  Commando.h  Response.cpp  Response.h  cross_compile.cmake  main.cpp
Code/sim-knx/sim-knx/: CMakeLists.txt  config.json  main.cpp
Code/sim-knx/sim-knx/inc/: Commando.h  Device.h  GenerateObject.h  Object.h  Response.h  Uart.h  commands.h  config.h  datatypes.h  json.h
Code/sim-knx/sim-knx/src/: Commando.cpp  Device.cpp  GenerateObject.cpp  Object.cpp  Response.cpp  Uart.cpp  udpRequest.cpp
Code/sim-knx/test/: CMakeLists.txt  Commando_tests.cpp  Commando_tests2.cpp  command_tests.cpp
Code/test-uart/: CMakeLists.txt  Uart.cpp  Uart.h  main.cpp
Code/testJson/: CMakeLists.txt  file.json  main.cpp
Code/testSocket/: CMakeLists.txt  main.cpp
Code/testgtest/: CMakeLists.txt  readme.md
Code/testgtest/test/: CMakeLists.txt  gtest.cpp
Code/uart-test/: Makefile  test  testuart
Code/weather/: SimKnx.py  config.py.example  weather.py
Code/webConfig/: config.json  index.html  script.php
Code/webconfig/: config.json
Code/webpage/: index.html  script.php
Udoo/: .gitignore  keuze devboard.ods
Udoo neo/: keuze devboard.ods
code/i2c-test/: Makefile  test  test.c
code/uart-test/: testuart.c
custom-linux/: .gitignore  buildroot_defconfig  mainline_oli_defconfig
custom-linux/Device tree/: device tree bewerking  imx6q-olivier.dts  imx6q-udoo-mainline-orig.dts  imx6q-udoo-mainline.dts  trash  (+1 more)
knx-tp interface/: Keuze tp-interface.ods
tuts/: homekit koppelen.html  homekit koppelen.md  nieuw project.html  nieuw project.md
(+75 files in other folders)
